// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NFSPL Round-trip Snapshots basic programs should round-trip a hello world program 1`] = `
"Main {
  PrintHi {
    stage(a, b)

    b {
      @you.set(72)
      @you.print_char
    }

    b {
      @you.set(@you + 1)
      @you.print_char
    }

    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots basic programs should round-trip a program with multiple scenes 1`] = `
"Main {
  Start {
    stage(n, out)

    out {
      @you.set(0)
    }
  }

  Loop {
    out {
      @you.set(@you + 1)
      test_gt(@you, 100)
      if_true(goto(End))
    }
  }

  End {
    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots complex programs should round-trip fizzbuzz structure 1`] = `
"Main {
  Start {
    stage(n, out)

    out {
      @you.set(0)
    }
  }

  Loop {
    out {
      @you.set(@you + 1)
    }

    out {
      test_gt(@you, 100)
      if_true(goto(End))
    }

    out {
      test_eq(@you % 15, 0)
      if_true(goto(Fizzbuzz))
    }

    out {
      test_eq(@you % 3, 0)
      if_true(goto(Fizz))
    }

    out {
      test_eq(@you % 5, 0)
      if_true(goto(Buzz))
    }

    n {
      @you.set(out)
      @you.print_int
      @you.set(10)
      @you.print_char
      goto(Loop)
    }
  }

  Fizzbuzz {
    n {
      @you.set('f')
      @you.print_char
      @you.set('i')
      @you.print_char
      @you.set('z')
      @you.print_char
      @you.set('z')
      @you.print_char
      @you.set('b')
      @you.print_char
      @you.set('u')
      @you.print_char
      @you.set('z')
      @you.print_char
      @you.set('z')
      @you.print_char
      @you.set(10)
      @you.print_char
      goto(Loop)
    }
  }

  Fizz {
    n {
      @you.set('f')
      @you.print_char
      @you.set('i')
      @you.print_char
      @you.set('z')
      @you.print_char
      @you.set('z')
      @you.print_char
      @you.set(10)
      @you.print_char
      goto(Loop)
    }
  }

  Buzz {
    n {
      @you.set('b')
      @you.print_char
      @you.set('u')
      @you.print_char
      @you.set('z')
      @you.print_char
      @you.set('z')
      @you.print_char
      @you.set(10)
      @you.print_char
      goto(Loop)
    }
  }

  End {
    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots complex programs should round-trip reverse program structure 1`] = `
"Main {
  Init {
    stage(stack, count)

    stack {
      @you.set(0)
    }
  }

  GetInput {
    count {
      @you.read_char
      @you.push_self
    }

    stack {
      @you.set(@you + 1)
      test_gt(@you, 0)
    }

    count {
      if_true(goto(GetInput))
      @you.pop
    }
  }

  PrintReversed {
    count {
      @you.pop
      @you.print_char
    }

    stack {
      @you.set(@you - 1)
      test_gt(@you, 0)
    }

    count {
      if_true(goto(PrintReversed))
    }
  }

  End {
    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots edge cases should round-trip empty scenes 1`] = `
"Main {
  EmptyScene {
  }

  AnotherEmpty {
  }
}"
`;

exports[`NFSPL Round-trip Snapshots edge cases should round-trip minimal dialogue blocks 1`] = `
"Main {
  MinimalDialogue {
    stage(speaker)

    speaker {
      @you.set(42)
    }

    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots edge cases should round-trip scenes with only stage directions 1`] = `
"Main {
  StageOnly {
    stage(a, b)
    unstage(a)
    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots edge cases should round-trip single character variables 1`] = `
"Main {
  SingleChar {
    stage(a, b)

    a {
      @you.set(b)
    }

    b {
      @you.set(a + 1)
    }

    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots formatting fixes should fix inconsistent indentation 1`] = `
"Main {
  Start {
    stage(a, b)

    a {
      @you.set(72)
      @you.print_char
    }

    b {
      @you.set(@you + 1)
      @you.print_char
    }

    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots formatting fixes should fix missing spaces around operators 1`] = `
"Main {
  Math {
    stage(calc, temp)

    calc {
      @you.set(5 + 3 * 2)
      @you.set(@you / 4 - 1)
      @you.set((temp + @you) % 10)
    }

    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots formatting fixes should fix spacing in function calls 1`] = `
"Main {
  TestSpacing {
    stage(tester, value)

    tester {
      test_eq(@you, 42)
      if_true(goto(End))
      test_gt(@you, 0)
      if_false(goto(Start))
    }
  }

  End {
    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots formatting fixes should fix spacing in stage/unstage calls 1`] = `
"Main {
  StageSpacing {
    stage(a, b)
    unstage(a, b)
    stage(c)
    unstage(c)
    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots language features should round-trip I/O operations 1`] = `
"Main {
  IOTest {
    stage(reader, writer)

    reader {
      @you.read_char
      @you.read_int
    }

    writer {
      @you.set('A')
      @you.print_char
      @you.set(42)
      @you.print_int
    }

    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots language features should round-trip all comparison operations 1`] = `
"Main {
  ComparisonTest {
    stage(left, right)

    left {
      test_eq(@you, right)
      test_gt(@you, right)
      test_lt(@you, right)
      test_not_eq(@you, right)
      test_not_gt(@you, right)
      test_not_lt(@you, right)
    }

    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots language features should round-trip arithmetic operations 1`] = `
"Main {
  ArithmeticTest {
    stage(calc, result)

    calc {
      @you.set(10 + 5)
      @you.set(20 - 7)
      @you.set(6 * 7)
      @you.set(15 / 3)
      @you.set(17 % 5)
    }

    result {
      @you.set(calc + result)
      @you.set(@you * 2)
    }

    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots language features should round-trip character literals 1`] = `
"Main {
  CharTest {
    stage(char_writer, output)

    char_writer {
      @you.set('A')
      @you.set('Z')
      @you.set('0')
      @you.set('9')
      @you.set(' ')
      @you.set('!')
    }

    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots language features should round-trip control flow 1`] = `
"Main {
  ControlTest {
    stage(tester, value)

    tester {
      test_eq(@you, 42)
      if_true(goto(Success))
      test_gt(@you, 0)
      if_false(goto(Failure))
    }
  }

  Success {
    stage(winner, output)

    winner {
      @you.set('W')
      @you.print_char
    }

    unstage_all
  }

  Failure {
    stage(loser, output)

    loser {
      @you.set('L')
      @you.print_char
    }

    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots language features should round-trip goto statements in various contexts 1`] = `
"Main {
  GotoTest {
    stage(jumper, counter)

    jumper {
      goto(NextScene)
    }
  }

  NextScene {
    stage(controller, value)

    controller {
      test_eq(@you, 0)
      if_true(goto(End))
      goto(GotoTest)
    }
  }

  End {
    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots language features should round-trip if statements with different actions 1`] = `
"Main {
  IfTest {
    stage(controller, output)

    controller {
      test_eq(@you, 0)
      if_true(@you.print_char)
      if_false(@you.print_int)
      if_true(@you.push_self)
      if_false(@you.pop)
    }

    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots language features should round-trip mixed @you operations 1`] = `
"Main {
  YouTest {
    stage(speaker, listener)

    speaker {
      @you.set(@you)
      @you.set(@you + 1)
      test_eq(@you, listener)
      test_gt(listener, @you)
    }

    listener {
      @you.set(speaker + @you)
      @you.push_self
      @you.push_me
      @you.pop
    }

    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots language features should round-trip multiple acts 1`] = `
"Act1 {
  Scene1 {
    stage(a, b)

    a {
      @you.set(1)
    }

    unstage_all
  }

  Scene2 {
    stage(c, d)

    c {
      @you.set(2)
    }

    unstage_all
  }
}

Act2 {
  Scene1 {
    stage(e, f)

    e {
      @you.set(3)
    }

    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots language features should round-trip multiple dialogues in one scene 1`] = `
"Main {
  Dialogue {
    stage(a, b)

    a {
      @you.set('H')
      @you.print_char
    }

    b {
      @you.set('i')
      @you.print_char
    }

    a {
      @you.set('!')
      @you.print_char
    }

    b {
      @you.set(10)
      @you.print_char
    }

    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots language features should round-trip nested arithmetic expressions 1`] = `
"Main {
  NestedMath {
    stage(calc, temp)

    calc {
      @you.set((5 + 3) * 2)
      @you.set(@you / 4 - 1)
      @you.set((temp + @you) % 10)
    }

    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots language features should round-trip stack operations 1`] = `
"Main {
  StackTest {
    stage(pusher, stack)

    pusher {
      @you.set(42)
      @you.push_self
      @you.push_me
    }

    stack {
      @you.pop
      @you.pop
    }

    unstage_all
  }
}"
`;

exports[`NFSPL Round-trip Snapshots language features should round-trip stage and unstage operations 1`] = `
"Main {
  StageTest {
    stage(a)
    unstage(a)
    stage(b, c)
    unstage(b, c)
    stage(d, e)
    unstage_all
  }
}"
`;
